# pfsense_api

./: .gitignore  README.md  pyproject.toml
release_notes/: v0.1.0.md
src/pfsense_api/: __init__.py  parser.py  supported_api.py
tests/: pfsense_test.py
